# alfred-rs

./: .travis.yml  Cargo.toml  LICENSE  LICENSE-MIT  README.md
res/: latest.json
src/: env.rs  json.rs  lib.rs  xml.rs
src/updater/: imp.rs  mod.rs  releaser.rs
