[package]

name = "alfred"
version = "4.0.1" # remember to update html_root_url in lib.rs
authors = ["Kevin Ballard <kevin@sb.org>"]
description = """
A library for writing Alfred workflows.

http://www.alfredapp.com
"""

documentation = "https://docs.rs/alfred/"
repository = "https://github.com/kballard/alfred-rs"

readme = "README.md"
license = "MIT/Apache-2.0"

[badges]
travis-ci = { repository = "kballard/alfred-rs" }

[dependencies]

serde_json = "1.0"
