[package]

name = "alfred"
version = "4.0.1" # remember to update html_root_url in lib.rs
authors = ["Kevin Ballard <kevin@sb.org>"]
description = """
A library for writing Alfred workflows.

http://www.alfredapp.com
"""

documentation = "https://docs.rs/alfred/"
repository = "https://github.com/kballard/alfred-rs"

readme = "README.md"
license = "MIT/Apache-2.0"

[badges]
travis-ci = { repository = "kballard/alfred-rs" }

[dependencies]

serde_json = "1.0"

chrono = { version = "0.4", features = ["serde"], optional = true }
reqwest = {version = "0.8", optional = true}
semver = {version = "0.9", features = ["serde"], optional = true }
serde = {version = "1.0", optional = true}
serde_derive = {version = "1.0", optional = true}
time = {version = "0.1", optional = true}

[dev-dependencies]
tempfile = "^3.0"
mockito = "0.9"

[features]
default = []
updater = ["chrono", "reqwest", "semver", "serde", "serde_derive", "time"]

# are we testing on CI?
ci = ["updater"]
